# webcodecs-node

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.rs  build.ts  dts-header.d.ts  index.d.ts  index.js  package-lock.json  package-template.wasi-browser.js  package-template.wasi.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  polyfill.d.ts  polyfill.js  standard.d.ts  test-debug-pts.mjs  tsconfig.json  tsconfig.polyfill.json
.github/: renovate.json
.github/workflows/: CI.yml  ffmpeg-build.yml
.husky/: pre-commit
__test__/: api-improvements.spec.ts  audio-data.spec.ts  audio-decoder.spec.ts  audio-encoder.spec.ts  demuxer.spec.ts  encoded-audio-chunk.spec.ts  encoded-video-chunk.spec.ts  event-target.spec.ts  hardware.spec.ts  image-decoder.spec.ts  index.spec.ts  muxer.spec.ts  polyfill.spec.ts  tsconfig.json  video-decoder.spec.ts  video-encoder.spec.ts  video-frame-canvas.spec.ts  video-frame-orientation.spec.ts  video-frame.spec.ts
__test__/fixtures/: generate-fixtures.mjs
__test__/helpers/: audio-generator.ts  codec-matrix.ts  frame-comparator.ts  frame-generator.ts  index.ts  wpt-frame-utils.ts  wpt-utils.ts
__test__/integration/: conversion.spec.ts  lifecycle.spec.ts  multi-codec.spec.ts  performance.spec.ts  roundtrip.spec.ts
__test__/wpt/: README.md  audio-data-wpt.spec.ts  audio-decoder-behavior.spec.ts  audio-decoder-config.spec.ts  audio-encoder-behavior.spec.ts  audio-encoder-config.spec.ts  codec-specific-decoder.spec.ts  encoded-chunk-wpt.spec.ts  full-cycle-test.spec.ts  image-decoder-wpt.spec.ts  per-frame-qp-encoding.spec.ts  reconfiguring-encoder.spec.ts  temporal-svc-encoding.spec.ts  video-color-space.spec.ts  video-decoder-behavior.spec.ts  video-decoder-config.spec.ts  video-encoder-behavior.spec.ts  video-encoder-config.spec.ts  video-encoder-content-hint.spec.ts  video-encoder-orientation.spec.ts  video-frame-orientation.spec.ts  video-frame-wpt.spec.ts
benchmark/: bench-napi.ts  bench-polyfill.ts  bench.ts  compare.ts
docs/: B-FRAME-CONTROL-FLOW.md  b-frames.md
example/: canvas-to-hevc.js  canvas-to-video.js  canvas-utils.js  canvas.webm  lottie-to-video.js  lottie.webm  output.webm  video.html  vite.config.js
lib/: index.ts  streams.ts
src/: lib.rs
src/codec/: audio_buffer.rs  avio_context.rs  context.rs  demuxer.rs  frame.rs  hwdevice.rs  hwframes.rs  io_buffer.rs  mod.rs  mp4_faststart.rs  muxer.rs  packet.rs  resampler.rs  scaler.rs
src/ffi/: accessors.c  accessors.rs  avcodec.rs  avformat.rs  avutil.rs  error.rs  hwaccel.rs  mod.rs  swresample.rs  swscale.rs  types.rs
src/webcodecs/: audio_data.rs  audio_decoder.rs  audio_encoder.rs  codec_pressure.rs  codec_string.rs  demuxer_base.rs  encoded_audio_chunk.rs  encoded_video_chunk.rs  error.rs  hardware.rs  hw_fallback.rs  image_decoder.rs  mkv_demuxer.rs  mkv_muxer.rs  mod.rs  mp4_demuxer.rs  mp4_muxer.rs  muxer_base.rs  promise_reject.rs  video_decoder.rs  video_encoder.rs  video_frame.rs  webm_demuxer.rs  webm_muxer.rs
tools/build-ffmpeg/: Cargo.toml
tools/build-ffmpeg/src/: main.rs
