[workspace]
members = ["tools/build-ffmpeg"]

[package]
name = "webcodec-node"
version = "0.1.0"
edition = "2021"
authors = ["LongYinan <lynweklm@gmail.com>"]
description = "WebCodecs API implementation for Node.js using FFmpeg"
license = "MIT"
repository = "https://github.com/user/webcodec-node"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS bindings
napi = { version = "3.0.0", features = ["async", "napi8", "web_stream"] }
napi-derive = "3.0.0"

futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Error handling
thiserror = "2"

# Concurrent data structures
crossbeam = "0.8"

# Zlib for FFmpeg static linking (builds zlib from source if needed)
libz-sys = { version = "1.1.23", default-features = false, features = ["static"] }

[build-dependencies]
napi-build = "2"
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
# Faster builds during development
opt-level = 0

[features]
default = []
# Enable hardware acceleration (requires platform-specific FFmpeg build)
hwaccel = []
# Use FFmpeg 5.1+ APIs (AVChannelLayout instead of legacy channel layout)
ffmpeg_5_1 = []
