[workspace]
members = ["tools/build-ffmpeg"]

[package]
name = "webcodecs-node"
version = "0.1.0"
edition = "2024"
authors = ["LongYinan <lynweklm@gmail.com>"]
description = "WebCodecs API implementation for Node.js using FFmpeg"
license = "MIT"
repository = "https://github.com/Brooooooklyn/webcodecs-node"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS bindings
napi = { version = "3", features = ["async", "napi4", "web_stream"] }
napi-derive = "3"

futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Error handling
thiserror = "2"

# Concurrent data structures
crossbeam = "0.8"

# Better RwLock implementation (no poisoning, better perf)
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "json"] }

[build-dependencies]
napi-build = "2"
cc = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
# Faster builds during development
opt-level = 0

[features]
default = []
